Introduce workshop for 3rd day

--- a/spotkanie2/notebook.ipynb
+++ b/spotkanie2/notebook.ipynb
@@ -655,7 +655,8 @@
    ],
    "source": [
     "# Sprawdzamy jaki procent mężczyzn oraz kobiet przeżył\n",
-    "train_df[[\"Sex\", \"Survived\"]].groupby(['Sex'], as_index=False).mean().sort_values(by='Survived', ascending=False)"
+    "train_df[[\"Sex\", \"Survived\"]].groupby(['Sex'], as_index=False).mean().sort_values(by='Survived',\n",
+    "                                                                                  ascending=False)"
    ]
   },
   {
@@ -746,7 +747,8 @@
    ],
    "source": [
     "# Grupujemy ludzi ze względu na liczbę rodzeństwa/małżonków i sprawdzamy jaki procent przeżył\n",
-    "train_df[[\"SibSp\", \"Survived\"]].groupby(['SibSp'], as_index=False).mean().sort_values(by='Survived', ascending=False)"
+    "train_df[[\"SibSp\", \"Survived\"]].groupby(['SibSp'], as_index=False).mean().sort_values(by='Survived',\n",
+    "                                                                                      ascending=False)"
    ]
   },
   {
@@ -837,7 +839,8 @@
    ],
    "source": [
     "# Grupujemy ludzi ze względu na liczbę rodziców/dzieci i sprawdzamy jaki procent przeżył\n",
-    "train_df[[\"Parch\", \"Survived\"]].groupby(['Parch'], as_index=False).mean().sort_values(by='Survived', ascending=False)"
+    "train_df[[\"Parch\", \"Survived\"]].groupby(['Parch'], as_index=False).mean().sort_values(by='Survived',\n",
+    "                                                                                      ascending=False)"
    ]
   },
   {
