Add homework after meeting #3

--- a/KodyZrodlowe/spotkanie3/day3-regression-unsupervised.ipynb
+++ b/KodyZrodlowe/spotkanie3/day3-regression-unsupervised.ipynb
@@ -1035,7 +1035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grupowanie (Clustering)"
+    "## Grupowanie (Clustering) (inaczej Analiza skupień)"
    ]
   },
   {
@@ -1610,7 +1610,7 @@
   "kernelspec": {
    "display_name": "AI Bootcamp",
    "language": "python",
-   "name": "bootcamp"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1622,7 +1622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
