Fix minor issue with homework

--- a/PraceDomowe/praca-domowa-3/notebook-do-wykonania.ipynb
+++ b/PraceDomowe/praca-domowa-3/notebook-do-wykonania.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "Zadanie polega na wytrenowaniu klasyfikatorów (*LogisticRegression* oraz *SVC*) na zbiorze danych MNIST.  \n",
     "\n",
-    "Pro tip: po to jest to PCA, żeby nie liczyć tego tydzień."
+    "Pro tip: po to między innymi jest to PCA, żeby nie liczyć tego tydzień."
    ]
   },
   {
