Add links about GDS

--- a/KodyZrodlowe/spotkanie3/day3-regression-unsupervised.ipynb
+++ b/KodyZrodlowe/spotkanie3/day3-regression-unsupervised.ipynb
@@ -662,7 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regresja liniowa (Linear regression)"
+    "### Regresja liniowa (Linear regression)\n",
+    "https://towardsdatascience.com/linear-regression-using-gradient-descent-97a6c8700931  \n",
+    "https://www.geeksforgeeks.org/gradient-descent-in-linear-regression/"
    ]
   },
   {
@@ -1035,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grupowanie (Clustering) (inaczej Analiza skupień)"
+    "## Grupowanie (Clustering) (inaczej analiza skupień)"
    ]
   },
   {
@@ -1598,6 +1600,8 @@
     "https://machinelearningmastery.com/classification-versus-regression-in-machine-learning/ - klasyfikacja vs regresja  \n",
     "https://towardsdatascience.com/understanding-boxplots-5e2df7bcbd51 - wykresy pudełkowe (box plots)  \n",
     "https://towardsdatascience.com/linear-regression-on-boston-housing-dataset-f409b7e4a155 - regresja liniowa  \n",
+    "https://towardsdatascience.com/linear-regression-using-gradient-descent-97a6c8700931  - gradient schodzący (descent)  \n",
+    "https://www.geeksforgeeks.org/gradient-descent-in-linear-regression/  - gradient schodzący (descent) inna wersja  \n",
     "https://towardsdatascience.com/understanding-the-bias-variance-tradeoff-165e6942b229 - obciążenie vs wariancja  \n",
     "https://dashee87.github.io/data%20science/general/Clustering-with-Scikit-with-GIFs/ - grupowanie  \n",
     "http://setosa.io/ev/principal-component-analysis/ - PCA  \n",
